feat: 支持通过接口上传skills
